examples/test/testpolicy11954.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy11954
  namespace: namespace349
spec:
  podSelector:
    matchLabels:
      key38: value47
      key13: value48
      key10: value30
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key7: value17
      podSelector:
        matchLabels:
          key26: value26
          key35: value23
